fixed alignment of menu li for mobile menu to center

--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,7 @@ GLOBAL STYLES
 			display: block;
 		    font-size: 1.8em;
 		    margin-bottom: 10px;
+		    text-align: center;
 		}
 
 		/* FEATURES */
